 - Add support for VTK output of facet-based MeshFunctions
 - Change default log level from PROGRESS to INFO
 - Add copy functions to FiniteElement and DofMap
 - Simfplify DofMap
 - Interpolate vector values when reading from time series
0.9.10 [2011-02-23]
 - Handle TimeSeries stored backward in time (automatic reversal)
 - Automatic storage of hierarchy during refinement
 - Remove directory/library 'main', merged into 'common'
 - dolfin_init --> init, dolfin_set_precision --> set_precision
 - Remove need for mesh argument to functional assembly when possible
 - Add function set_output_stream
 - Add operator () for evaluation at points for Function/Expression in C++
 - Add abs() to GenericVector interface
 - Fix bug for local refinement of manifolds
 - Interface change: VariationalProblem now takes: a, L or F, (dF)
 - Map linear algebra objects to processes consistently with mesh parition
 - Lots of improvemenst to parallel assembly, dof maps and linear algebra
 - Add lists supported_elements and supported_elements_for_plotting in Python
 - Add script dolfin-plot for plotting meshes and elements from the command-line
 - Add support for plotting elements from Python
 - Add experimental OpenMP assembler
 - Thread-safe fixed in Function class
 - Make GenericFunction::eval thread-safe (Data class removed)
 - Optimize and speedup topology computation (mesh.init())
 - Add function Mesh::clean() for cleaning out auxilliary topology data
 - Improve speed and accuracy of timers
 - Fix bug in 3D uniform mesh refinement
 - Add built-in meshes UnitTriangle and UnitTetrahedron
 - Only create output directories when they don't exist
 - Make it impossible to set the linear algebra backend to something illegal
 - Overload value_shape instead of dim for userdefined Python Expressions
 - Permit unset parameters
 - Search only for BLAS library (not cblas.h)
0.9.9 [2010-09-01]
 - Change build system to CMake